--- a/src/shared/assets/scss/_app.scss
+++ b/src/shared/assets/scss/_app.scss
@@ -5,3 +5,11 @@
         }
     }
 }
+.modal{
+    .ant-modal-footer{
+        display: none;
+    }
+    .ant-modal-close{
+        display: none;
+    }
+}
