Boite de dialogue

--- a/src/shared/assets/scss/_app.scss
+++ b/src/shared/assets/scss/_app.scss
@@ -13,3 +13,12 @@
         display: none;
     }
 }
+
+.modal-confirm{
+    .ant-modal-footer{
+        display: none;
+    }
+    .ant-modal-close{
+        display: none;
+    }
+}
